# haml-rs

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  RELEASE  ast  t  test.html
benches/: bench.rs
haml_derive/: Cargo.toml
haml_derive/src/: lib.rs
src/: ast.rs  common.rs  generator.rs  lex.rs  lib.rs  parse.rs  parser.rs  pipeline.rs  pipes.rs  scanner.rs  tokenizer.rs  values.rs
src/arena/: mod.rs
src/ast/: a.rs  article.rs  aside.rs  custom.rs  details.rs  div.rs  figcaption.rs  figure.rs  footer.rs  header.rs  main.rs  mark.rs  mod.rs  nav.rs  section.rs  span.rs  summary.rs  time.rs
src/formatter/: html4_formatter.rs  html5_formatter.rs  mod.rs  xhtml_formatter.rs  xml_formatter.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/parser/: comment.rs  doctype.rs  element.rs  mod.rs
src/regex/: mod.rs
src/traits/: Cargo.toml
src/traits/src/: lib.rs
tests/: basic.html  basic_tests.rs  common.rs  headers.rs  integration_test1.rs  tests.json  tests.rs
tests/common/: mod.rs
tests/inputs/: 01_basic.haml  02_head.haml  03_comments.haml  basic.haml  custom.haml  ruby_attributes.haml
tests/outputs/: 01_basic.html  02_head.html  03_comments.html  basic.html  custom.html  ruby_attributes.html
