[package]
name = "hamlrs"
version = "0.4.2"
authors = ["Jon Hartwell <jon@dontbreakthebuild.com>"]
license = "MIT"
description = "A Rust library for parsing [Haml](http://haml.info) templates"
respository = "https://github.com/Haml-rs/haml-rs"
keywords = ["haml", "templating", "template"]
categories = ["development-tools", "parser-implementations", "template-engine"]
readme = "README.md"
maintenance = { status = "actively-developed" }
edition = "2018"

[lib]
name = "haml"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
haml_derive = {path = "haml_derive"}