[package]
name = "hamlrs"
version = "0.4.2"
authors = ["Jon Hartwell <jon@dontbreakthebuild.com>"]
license = "MIT"
description = "A Rust library for parsing [Haml](http://haml.info) templates"
repository = "https://github.com/jhartwell/haml-rs"
keywords = ["haml", "templating", "template"]
categories = ["development-tools", "parser-implementations", "template-engine"]
readme = "README.md"
maintenance = { status = "actively-developed" }
edition = "2018"

[lib]
name = "haml"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
regex = "1"

[dev-dependencies]
serde_derive = "1.0.91"
serde = "1.0.91"
serde_json = "1.0.39"